--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,5 +1,8 @@
 pipeline {
   agent any
+  tools {
+    maven 'maven-3.9.11' // Ensure Maven is installed and configured in Jenkins
+  }
   stages {
     stage('Checkout') {
       steps {
