--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
   agent any
   tools {
-    maven 'Maven 3.9.11' // Ensure Maven is installed and configured in Jenkins
+    maven 'maven' // Ensure Maven is installed and configured in Jenkins
   }
   stages {
     stage('Checkout') {
