Update deployment image tag and enhance Slack notification parameters in Jenkins pipeline

--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -162,6 +162,7 @@ def safeSlackSend(String color, String message) {
         color: color,
         message: message,
         tokenCredentialId: env.SLACK_CREDENTIAL_ID,
+        teamDomain: 'work',
         iconEmoji: ':jenkins:'
       )
       echo "✅ Slack notification sent successfully"
