--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: khaledhawil/java-cicd:18
+        image: khaledhawil/java-cicd:replaceImageTag
         ports:
         - containerPort: 8080
