Improve Jenkins pipeline: Enhanced error handling for Slack, better console output, and temporary Slack disable for troubleshooting

--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -6,14 +6,20 @@ pipeline {
   environment {
     SLACK_CHANNEL = '#devops'
     SLACK_CREDENTIAL_ID = 'slack'
-    ENABLE_SLACK = 'true' // Set to 'false' to disable Slack notifications
+    ENABLE_SLACK = 'false' // Set to 'true' once Slack is working properly
   }
   
   stages {
     stage('Pipeline Started') {
       steps {
         script {
+          echo "🚀 =============================================="
           echo "🚀 Starting CI/CD Pipeline for ${JOB_NAME} #${BUILD_NUMBER}"
+          echo "🚀 Repository: Java-app-CI-CD-with-GitOps"
+          echo "🚀 Branch: master"
+          echo "🚀 Build URL: ${BUILD_URL}"
+          echo "🚀 =============================================="
+          
           // Safe Slack notification
           safeSlackSend('#36a64f', ":jenkins: *Pipeline Started* :rocket:\n*Job:* ${JOB_NAME}\n*Build:* #${BUILD_NUMBER}\n*Branch:* master\n*Started by:* admin\n*Build URL:* ${BUILD_URL}")
         }
@@ -129,12 +135,34 @@ pipeline {
     success {
       script {
         def duration = currentBuild.durationString.replace(' and counting', '')
+        echo "🎉 =============================================="
+        echo "🎉 PIPELINE COMPLETED SUCCESSFULLY!"
+        echo "🎉 Job: ${JOB_NAME}"
+        echo "🎉 Build: #${BUILD_NUMBER}" 
+        echo "🎉 Duration: ${duration}"
+        echo "🎉 Docker Image: khaledhawil/java-cicd:${BUILD_NUMBER}"
+        echo "🎉 Deployment: Updated to version ${BUILD_NUMBER}"
+        echo "🎉 Build URL: ${BUILD_URL}"
+        echo "🎉 Console: ${BUILD_URL}console"
+        echo "🎉 =============================================="
+        
         safeSlackSend('good', ":jenkins: *Pipeline Completed Successfully* :tada:\n*Job:* ${JOB_NAME}\n*Build:* #${BUILD_NUMBER}\n*Status:* SUCCESS :white_check_mark:\n*Duration:* ${duration}\n*Docker Image:* khaledhawil/java-cicd:${BUILD_NUMBER}\n*Deployment:* Updated to version ${BUILD_NUMBER}\n*Build URL:* ${BUILD_URL}\n*Console:* ${BUILD_URL}console")
       }
     }
     failure {
       script {
         def duration = currentBuild.durationString.replace(' and counting', '')
+        echo "❌ =============================================="
+        echo "❌ PIPELINE FAILED!"
+        echo "❌ Job: ${JOB_NAME}"
+        echo "❌ Build: #${BUILD_NUMBER}"
+        echo "❌ Duration: ${duration}"
+        echo "❌ Failed Stage: ${env.STAGE_NAME ?: 'Unknown'}"
+        echo "❌ Build URL: ${BUILD_URL}"
+        echo "❌ Console: ${BUILD_URL}console"
+        echo "❌ Please check the logs for more details"
+        echo "❌ =============================================="
+        
         safeSlackSend('danger', ":jenkins: *Pipeline Failed* :x:\n*Job:* ${JOB_NAME}\n*Build:* #${BUILD_NUMBER}\n*Status:* FAILED :red_circle:\n*Duration:* ${duration}\n*Failed Stage:* ${env.STAGE_NAME ?: 'Unknown'}\n*Build URL:* ${BUILD_URL}\n*Console:* ${BUILD_URL}console\n*Please check the logs for more details* :point_up:")
       }
     }
@@ -157,18 +185,35 @@ pipeline {
 def safeSlackSend(String color, String message) {
   if (env.ENABLE_SLACK == 'true') {
     try {
+      // Try with minimal configuration first
       slackSend(
         channel: env.SLACK_CHANNEL,
         color: color,
         message: message,
-        tokenCredentialId: env.SLACK_CREDENTIAL_ID,
-        teamDomain: 'work',
-        iconEmoji: ':jenkins:'
+        tokenCredentialId: env.SLACK_CREDENTIAL_ID
       )
-      echo "✅ Slack notification sent successfully"
+      echo "✅ Slack notification sent successfully to ${env.SLACK_CHANNEL}"
     } catch (Exception e) {
-      echo "⚠️ Slack notification failed (continuing pipeline): ${e.getMessage()}"
-      echo "📝 Message: ${message}"
+      // Try alternative approach with teamDomain
+      try {
+        slackSend(
+          channel: env.SLACK_CHANNEL,
+          color: color,
+          message: message,
+          tokenCredentialId: env.SLACK_CREDENTIAL_ID,
+          teamDomain: 'work'
+        )
+        echo "✅ Slack notification sent successfully with teamDomain"
+      } catch (Exception e2) {
+        echo "⚠️ Slack notification failed (continuing pipeline):"
+        echo "   Error 1: ${e.getMessage()}"
+        echo "   Error 2: ${e2.getMessage()}"
+        echo "📝 Would have sent: ${message}"
+        echo "🔧 Please check:"
+        echo "   1. Slack credential 'slack' exists and is valid"
+        echo "   2. Bot token has permission to post to #devops channel"
+        echo "   3. Jenkins Slack plugin is properly configured"
+      }
     }
   } else {
     echo "📝 Slack disabled. Message: ${message}"
